<resources>
    <string name="app_name">RunningTracker</string>
    <string name="run">RUN</string>
    <string name="track">TRACK</string>
    <string name="runLogo">Run Logo</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="today">Today\'s Achievements</string>
    <string name="month">Total Distance (Month)</string>
    <string name="history"><u>Run History</u></string>
    <string name="time_text">Time</string>
    <string name="distance_text">Distance</string>
    <string name="view_by">Which do you want to view by ?</string>
    <string name="selectBtn">SELECT</string>
    <string name="date_text">Date</string>
    <string name="completion_time_text">Completion Time</string>
    <string name="comment_text">Comments</string>
    <string name="update_comment_text">Update Comment</string>
    <string name="fastest_today">Fastest Time Today:</string>
</resources>