<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/run_textView"
        android:layout_width="196dp"
        android:layout_height="29dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/run"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/track_textView"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:shadowColor="#00ccff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/track"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run_textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="88dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/runLogo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/run_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/title_linearLayout2"
        android:layout_width="248dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:alpha="0.9"
        android:background="@drawable/boxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_textView">

        <TextView
            android:id="@+id/month_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_linearLayout2"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:alpha="0.8"
        android:background="@drawable/boxes"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout2">

        <TextView
            android:id="@+id/display_total_distance_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/title_linearLayout"
        android:layout_width="248dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:alpha="0.9"
        android:background="@drawable/boxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_linearLayout2">

        <TextView
            android:id="@+id/today_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_linearLayout"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:alpha="0.8"
        android:background="@drawable/boxes"
        android:orientation="horizontal"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout">

        <TextView
            android:id="@+id/display_total_distance_today"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/single_fastest_today"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/fastest_today"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_linearLayout" />

    <TextView
        android:id="@+id/display_fastest_today"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_linearLayout" />

    <TextView
        android:id="@+id/startTimer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runHistory_button" />

    <Button
        android:id="@+id/startTimer_button"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/timer"
        android:onClick="timer_onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimer_text" />

    <Button
        android:id="@+id/runHistory_button"
        android:layout_width="245dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/historybox"
        android:backgroundTint="@color/tintColor"
        android:gravity="center"
        android:onClick="runHistory_OnClick"
        android:text="@string/history"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_fastest_today" />

</androidx.constraintlayout.widget.ConstraintLayout>