<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg">

    <RelativeLayout
        android:id="@+id/time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="85dp"
        android:alpha="0.8"
        android:background="@drawable/boxes"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/time_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/time_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="180dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/time_textView">

            <TextView
                android:id="@+id/current_timer_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:textSize="45sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/distance_textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="130dp"
            android:gravity="center"
            android:text="@string/distance_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <RelativeLayout
            android:id="@+id/distance_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/time_textView">

            <TextView
                android:id="@+id/current_distance_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:textSize="45sp" />

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="200dp"
        android:layout_height="37dp"
        android:background="@drawable/historybox"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="stop_timer_OnClick"
        android:text="@string/stop"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>